--- a/styles.css
+++ b/styles.css
@@ -444,6 +444,61 @@ h3 {
 }
 
 
+/* #contact-form {
+    display: flex;
+    flex-direction: column; 
+    gap: 0.5rem;
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+#contact-form input,
+#contact-form textarea {
+    padding: 0.8rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background: var(--background-color);
+    color: var(--text-color);
+}
+
+.contact-text{
+    font-size: 2.0rem;
+    font-weight: 600;
+    background: linear-gradient(to right, #4ade80, #3b82f6);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+.contact-icon{
+    color: linear-gradient(to right, #4ade80, #3b82f6);;
+}
+.contact-content{
+    margin-bottom: 2rem;
+}
+
+#contact-form button {
+    background: linear-gradient(to right, #4ade80, #3b82f6);;
+    color: #fff;
+    padding: 0.8rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: 500;
+} */
+/* Contact Section */
+
+.contact-section {
+    display: flex;
+    gap: 2rem;
+    justify-content: space-between;
+}
+
+.contact-section .flex-1 {
+    flex: 1;
+    max-width: 50%;
+}
+
+
 #contact-form {
     display: flex;
     flex-direction: column; 
@@ -485,7 +540,6 @@ h3 {
     cursor: pointer;
     font-weight: 500;
 }
-
 @media (max-width: 768px) {
     .contact {
         flex-direction: column;
